Archive2/80/da44470a269684/main.cpp
class Simple
{
    static const double x = 5.5;
};

int main(){}
